--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-credentials.json
+# Terraform files
 .terraform
-terraform.tfvars
 terraform.tfstate
-terraform.tfstate.backup
+terraform.tfvars
+*.tfstate*
+
+# OS X files
+.history
+.DS_Store
+
+# IntelliJ files
+.idea_modules
+*.iml
+*.iws
+*.ipr
+.idea/
+build/
+*/build/
+out/
+
+# Go best practices dictate that libraries should not include the vendor directory
+vendor
+
+# Ignore test data
+.test_data/
+
+credentials.json
+*.pem
