--- a/modules/ansible/dnsmaq/defaults/main.yml
+++ b/modules/ansible/dnsmaq/defaults/main.yml
@@ -2,5 +2,5 @@
 consul_domain: "consul"
 consul_ip: "127.0.0.1"
 consul_dns_port: 8600
-dns_masq_config_dir: "/etc/dnsmasq.d"
-consul_dns_masq_config_file: "{{ dns_masq_config_dir }}/consul"
+consul_dns_masq_config_dir: "/etc/dnsmasq.d"
+consul_dns_masq_config_file: "{{ consul_dns_masq_config_dir }}/consul"
