--- a/modules/ansible/dnsmaq/tasks/main.yml
+++ b/modules/ansible/dnsmaq/tasks/main.yml
@@ -1,31 +1,28 @@
 ---
 # Update OS and install dnsmasq
-- block:
-  - name: Update OS
-    apt:
-      update_cache: yes
-    become: yes
+- name: Update OS
+  apt:
+    update_cache: yes
+  become: yes
 
-  - name: Install dnsmasq
-    apt:
-      pkg:
-        - dnsmasq
-      state: present
-    become: yes
+- name: Install dnsmasq
+  apt:
+    name: ["dnsmasq"]
+    state: present
+    update_cache: yes
 
-- block:
-  - name: "Create dnsmasq config directory"
-    file:
-      dest: "{{ consul_dns_masq_config_dir }}"
-      state: directory
-      mode: 0755
-    become: yes
+- name: "Create dnsmasq config directory"
+  file:
+    dest: "{{ consul_dns_masq_config_dir }}"
+    state: directory
+    mode: 0755
 
-  - name: Write consul config
-    copy: "{{ consul_dns_masq_config_file }}"
+- name: Write consul config
+  copy:
+    dest: "{{ consul_dns_masq_config_file }}"
     content: |
       server=/{{ consul_domain }}/{{ consul_ip }}#{{ consul_dns_port }}
       listen-address={{ consul_ip }}
       bind-interfaces
-    become: yes
+    remote_src: true
 
