--- a/modules/ansible/consul/tasks/main.yml
+++ b/modules/ansible/consul/tasks/main.yml
@@ -1,97 +1,6 @@
 ---
-# Update operating system package
-- name: Update OS
-  apt:
-    update_cache: yes
+- name: Install consul
+  shell: "{{ consul_installation_path }} --version {{ consul_version }} --path {{ consul_installation_dir }} --user {{ consul_user }} --ca-file-path {{ consul_ca_file_path }} --cert-file-path {{ consul_cert_file_path }} --key-file-path {{ consul_key_file_path }}"
+  args:
+    executable: /bin/bash
   become: yes
-
-- name: Install OS require packages
-  apt:
-    name: ["zip", "unzip", "tar", "curl", "jq"]
-    state: present
-    update_cache: yes
-  become: yes
-
-# Create group and user consul
-- name: Create consul group
-  group:
-    name: "{{ consul_group }}"
-    state: present
-
-
-- name: Create consul user
-  user:
-    name: "{{ consul_user }}"
-    comment: "Consul user"
-    group: "{{ consul_group }}"
-    system: true
-
-# Install consul
-- name: Ensure that the consul package {{ consul_download_url }} is download to {{ consul_installation_path }}
-  get_url:
-    url: "{{ consul_download_url }}"
-    dest: "{{ consul_installation_path }}"
-    sha256sum: "{{ consul_sha256_checksum }}"
-    mode: 644
-
-- name: Extract the consul package {{ consul_installation_path }} to {{ consul_installation_dir }}
-  unarchive:
-    src: "{{ consul_installation_path }}"
-    dest: "{{ consul_installation_dir }}"
-    remote_src: true
-    mode: 644
-
-- name: Copy consul to {{ system_bin_dir }}
-  copy:
-    src: "{{ consul_installation_dir }}/consul"
-    dest: "{{ system_bin_dir }}/consul"
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: "a+x"
-    remote_src: true
-
-# Install run-consul
-- name: Install run-consul to {{ system_bin_dir }}
-  copy:
-    src: "{{ consul_installation_dir }}/run-consul"
-    dest: "{{ system_bin_dir }}/run-consul"
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: "a+x"
-    remote_src: true
-
-# Install TLS
-- name: Create SSL directory
-  file:
-    dest: "{{ consul_tls_dir }}"
-    state: directory
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: 0755
-  
-- name: Copy CA certificate
-  copy:
-    src: "{{ consul_installation_tls_ca_certificate_path }}"
-    dest: "{{ consul_tls_dir }}/ca.pem"
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: 0644
-    remote_src: true
-  
-- name: Copy Server certificate
-  copy:
-    src: "{{ consul_installation_tls_server_certificate_path }}"
-    dest: "{{ consul_tls_dir }}/server.pem"
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: 0644
-    remote_src: true
-  
-- name: Copy Server key
-  copy:
-    src: "{{ consul_installation_tls_server_key_path }}"
-    dest: "{{ consul_tls_dir }}/key.pem"
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group }}"
-    mode: 0644
-    remote_src: true
