--- a/modules/ansible/roles/consul/tasks/main.yml
+++ b/modules/ansible/roles/consul/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install consul
-  shell: "{{ consul_installation_path }} --version {{ consul_version }} --path {{ consul_installation_dir }} --user {{ consul_user }} --ca-file-path {{ consul_ca_file_path }} --cert-file-path {{ consul_cert_file_path }} --key-file-path {{ consul_key_file_path }}"
+  shell: "{{ consul_installation_path }} --version {{ consul_installation_version }} --path {{ consul_dir_path }} --user {{ consul_user }} --ca-file-path {{ consul_installation_ca_file_path }} --cert-file-path {{ consul_installation_cert_file_path }} --key-file-path {{ consul_installation_key_file_path }}"
   args:
     executable: /bin/bash
   become: yes
