Update TF and Ansible

--- a/modules/ansible/roles/consul/defaults/main.yml
+++ b/modules/ansible/roles/consul/defaults/main.yml
@@ -8,3 +8,14 @@ consul_installation_cert_file_path: "{{ consul_installation_tls_dir }}/cert.pem"
 consul_installation_key_file_path: "{{ consul_installation_tls_dir }}/key.pem"
 consul_dir_path: "/opt/consul"
 consul_user: "consul"
+consul_cluster_tag_name: "consul_gcp_dc1"
+consul_datacenter: "gcp_dc1"
+consul_config_dir: "{{ consul_dir_path }}/config"
+consul_data_dir: "{{ consul_dir_path }}/data"
+consul_ca_file_path: "{{ consul_dir_path }}/tls/ca/ca.pem"
+consul_cert_file_path: "{{ consul_dir_path }}/tls/cert.pem"
+consul_key_file_path: "{{ consul_dir_path }}/tls/key.pem"
+consul_bin_dir: "/usr/local/bin"
+consul_gossip_encryption_key: "8NxEfoWD5XfXnE5dyOZlhmvFDD0LJp4E7EZbtE+38LY="
+consul_http_max_connections_per_client: 256
+consul_mode: server
