--- a/modules/ansible/roles/consul/defaults/main.yml
+++ b/modules/ansible/roles/consul/defaults/main.yml
@@ -12,6 +12,7 @@ consul_cluster_tag_name: "consul_gcp_dc1"
 consul_datacenter: "gcp_dc1"
 consul_config_dir: "{{ consul_dir_path }}/config"
 consul_data_dir: "{{ consul_dir_path }}/data"
+consul_scripts_dir: "{{ consul_dir_path }}/scripts"
 consul_ca_file_path: "{{ consul_dir_path }}/tls/ca/ca.pem"
 consul_cert_file_path: "{{ consul_dir_path }}/tls/cert.pem"
 consul_key_file_path: "{{ consul_dir_path }}/tls/key.pem"
