--- a/modules/ansible/roles/consul/defaults/main.yml
+++ b/modules/ansible/roles/consul/defaults/main.yml
@@ -9,7 +9,7 @@ consul_installation_key_file_path: "{{ consul_installation_tls_dir }}/key.pem"
 consul_dir_path: "/opt/consul"
 consul_user: "consul"
 consul_cluster_tag_name: "consul_gcp_dc1"
-consul_cluster_zone_pattern: "asia-southeast1*"
+consul_cluster_zone_pattern: "asia-southeast1-.*"
 consul_datacenter: "gcp_dc1"
 consul_config_dir: "{{ consul_dir_path }}/config"
 consul_data_dir: "{{ consul_dir_path }}/data"
