--- a/modules/ansible/roles/consul/defaults/main.yml
+++ b/modules/ansible/roles/consul/defaults/main.yml
@@ -13,10 +13,13 @@ consul_cluster_zone_pattern: "asia-southeast1-.*"
 consul_datacenter: "gcp-dc1"
 consul_config_dir: "{{ consul_dir_path }}/config"
 consul_data_dir: "{{ consul_dir_path }}/data"
-consul_scripts_dir: "{{ consul_dir_path }}/scripts"
+consul_script_dir: "{{ consul_dir_path }}/scripts"
 consul_ca_file_path: "{{ consul_dir_path }}/tls/ca/ca.pem"
 consul_cert_file_path: "{{ consul_dir_path }}/tls/cert.pem"
 consul_key_file_path: "{{ consul_dir_path }}/tls/key.pem"
 consul_bin_dir: "/usr/local/bin"
 consul_gossip_encryption_key: "8NxEfoWD5XfXnE5dyOZlhmvFDD0LJp4E7EZbtE+38LY="
 consul_http_max_connections_per_client: 256
+consul_acl_master_token: "YYlIhyoW+4q9th/6BNoUUPTfFW8dQJpyukkZPh/F4Mo="
+consul_acl_agent_token: "CvACGYGduWBG+spXDaTPTUufBoehwLOoksavSQ+HuqI="
+consul_cluster_version: "0.0.1"
