Fix ansible script

--- a/modules/ansible/roles/consul/defaults/main.yml
+++ b/modules/ansible/roles/consul/defaults/main.yml
@@ -23,3 +23,4 @@ consul_http_max_connections_per_client: 256
 consul_acl_master_token: "aefb6c04-4e30-4f34-89c2-f2c385da797a"
 consul_acl_agent_token: "941b485f-9fcf-49cc-96c2-0ff50b929b3d"
 consul_cluster_version: "0.0.1"
+consul_server_cluster_size: 3
