--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,29 @@
-# Terraform files
-.terraform
-terraform.tfstate
-terraform.tfvars
-*.tfstate*
+# Local .terraform directories
+**/.terraform/*
 
-# OS X files
-.history
-.DS_Store
+# .tfstate files
+*.tfstate
+*.tfstate.*
 
-# IntelliJ files
-.idea_modules
-*.iml
-*.iws
-*.ipr
-.idea/
-build/
-*/build/
-out/
+# Crash log files
+crash.log
 
-# Go best practices dictate that libraries should not include the vendor directory
-vendor
+# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
+# .tfvars files are managed as part of configuration and so should be included in
+# version control.
+#
+# example.tfvars
 
-# Ignore test data
-.test_data/
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
 
-credentials.json
-*vagrant
+# Include override files you do wish to add to version control using negated pattern
+#
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
